[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-decision-receipts"
version = "0.1.0"
description = "Ed25519-signed decision receipts for Nous Research Hermes agent tool calls. Companion to hermes-aps-delegation; conforms to draft-farley-acta-signed-receipts."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Tom Farley", email = "tjf@veritasacta.com" },
]
keywords = ["hermes", "nous", "agent", "receipts", "ed25519", "jcs", "governance", "audit", "attestation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pynacl>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/ScopeBlind/hermes-decision-receipts"
Repository = "https://github.com/ScopeBlind/hermes-decision-receipts"
"APS Companion" = "https://github.com/aeoess/hermes-aps-delegation"
"IETF Draft" = "https://datatracker.ietf.org/doc/draft-farley-acta-signed-receipts/"
"Veritas Acta" = "https://veritasacta.com"
"Hermes Issue" = "https://github.com/NousResearch/hermes-agent/issues/11692"

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_decision_receipts"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]
